# GenAI

basic_agent/: README.md  main.py  pyproject.toml  utils.py
basic_agent/agent/: agent.py  llm_client.py  parser.py  policy.py  tools.py
react/: .gitignore  README.md  pyproject.toml  test_task.txt
react/react_agent/: cli.py  global_utils.py  prompt_template.py
react/react_agent/core/: agent.py  llm_client.py  parser.py  policy.py  tools.py
react/tests/: app.js  index.html  script.js  snake.css  snake.html  snake.js  style.css  styles.css
