[project]
name = "react-agent"
version = "0.1.0"
description =[project.scripts] "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "click>=8.3.1",
    "openai>=2.8.0",
    "python-dotenv>=1.2.1",
]
[project.scripts]
react-agent = "react_agent.cli:main"

