[project]
name = "react-agent"
version = "0.1.0"
description = "A small ReAct-style agent demo"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "click>=8.3.1",
    "openai>=2.8.0",
    "python-dotenv>=1.2.1",
]

[project.scripts]
react-agent = "react_agent.cli:main"

# Configure setuptools for building
[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

# Only include our package folder, ignore assets/
[tool.setuptools.packages.find]
include = ["react_agent*"]


